--- a/src/styles/login.module.css
+++ b/src/styles/login.module.css
@@ -229,7 +229,7 @@ form {
     position: absolute;
     width: 100%;
     height: 100%;
-    top: 0;
+    top: -5%;
     left: 15%;
   }
   .image {
@@ -241,5 +241,16 @@ form {
   .contenedor::before {
     bottom: 72%;
     left: 50%;
+  }
+  .input_field {
+    max-width: 380px;
+    width: 75%;
+    height: 55px;
+    background: #f0f0f0;
+    margin: 2px 0;
+    border-radius: 55px;
+    display: grid;
+    grid-template-columns: 15% 85%;
+    padding: 0 .4rem;
   }
 }
