--- a/src/styles/login.module.css
+++ b/src/styles/login.module.css
@@ -13,7 +13,7 @@
 .contenedor {
   position: relative;
   width: 100%;
-  min-height: 99.9vh;
+  min-height: 90.9vh;
   background-color: #fff;
   overflow: hidden;
 }
@@ -37,7 +37,7 @@
   top: 0;
   left: 0;
 }
-form {
+.sign_in_form {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -105,17 +105,17 @@ form {
 .signin {
   position: absolute;
   top: 50%;
-  left: 85%;
+  left: 75%;
   transform: translate(-50%, -50%);
   width: 50%;
-  z-index: 5;
+  z-index: 1;
   transition: .5s ease-in-out;
 }
 .signin_in_form {
   z-index: 2;
 }
 .image {
-  width: 90%;
+  width: 70%;
   padding: 30px;
   transition: .9s .6s ease-in-out;
 }
@@ -145,6 +145,7 @@ form {
   line-height: 3;
   font-size: 1.5em;
   color: #fff;
+  margin-top: 13%;
 }
 .panel p {
   color: #fff;
@@ -164,6 +165,11 @@ form {
   padding: 3rem 17% 2rem 12%;
   pointer-events: all;
 }
+
+.logo_nav{
+  width: 10%;
+}
+
 @media (max-width: 870px) {
   .contenedor {
     min-height: 80px;
@@ -204,6 +210,8 @@ form {
   }
   .image {
     width: 300px;
+    margin-top: -100px;
+    margin-left: 55%;
   }
   .transparent {
     width: 110px;
@@ -218,7 +226,7 @@ form {
     width: 100%;
     height: 100%;
     top: 0;
-    left: 25%;
+    left: 0%;
   }
 }
 @media (max-width: 570px) {
@@ -230,7 +238,7 @@ form {
     width: 100%;
     height: 100%;
     top: -5%;
-    left: 15%;
+    left: 0%;
   }
   .image {
     display: none;
