--- a/src/styles/form.module.css
+++ b/src/styles/form.module.css
@@ -11,7 +11,7 @@
 .contenedor_two {
   position: relative;
   width: 100%;
-  min-height: 99.9vh;
+  min-height: 90.9vh;
   background-color: #fff;
   overflow: hidden;
 }
@@ -44,17 +44,56 @@
   overflow: hidden;
   transition: 0.2s 0.7 ease-in-out;
 }
+
 .buro {
   position: absolute;
-  top: 49%;
-  left: 19.5%;
-  transform: translate(-50%, -50%);
-  width: 60%;
+  max-width: 1000px;
+  width: 100%;
+  margin-left: -70px;
+  padding: 25px 30px;
+  border-radius: 5px;
   z-index: 8;
-  transition: .5s ease-in-out;
 }
+
 .buro_form {
-  z-index: 2;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.input_box{
+  width: calc(100% / 2 - 20px);
+  margin-bottom: 10px;
+}
+
+.input_box input{
+  height: 45px;
+  width: 110%;
+  outline: none;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  padding-left: 15px;
+  font-size: 16px;
+  transition: all 0.3s ease;
+}
+
+.input_box input:focus,
+.input_box input:valid{
+  border-color: #000;
+}
+
+.data_bank{
+  width: 100%;
+}
+
+.data_bank input{
+  margin: 5px;
+}
+
+.details{
+  display: block;
+  font-weight: 500;
+  margin-bottom: 5px;
 }
 
 .image_form {
@@ -91,13 +130,24 @@
   font-size: 1.5em;
 }
 
-input{
-  margin: 2px 0;
+@media (max-width: 1300px){
+  .buro {
+    max-width: 700px;
+    width: 100%;
+    margin-left: -70px;
+    padding: 25px 30px;
+    border-radius: 5px;
+  }
+  .contenedor_two {
+    min-height: 133.9vh;
+  }
 }
 @media (max-width: 900px) {
-  .image_form {
+  .image_form,
+  .image_bank {
     display: none;
   }
+  
   .form_panel {
     position: absolute;
     width: 100%;
@@ -108,14 +158,20 @@ input{
     color: #fff;
   }
   .buro {
+    max-width: 100%;
+    margin: auto;
     position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 55%;
     z-index: 8;
-    transition: .5s ease-in-out;
   }
+
+  .buro_form{
+    margin-bottom: 15px;
+  }
+
+  .data_bank{
+    width: 100%;
+  }
+
   .contenedor_two::before {
     content: '';
     position: absolute;
@@ -150,15 +206,15 @@ input{
     grid-template-columns: repeat(1, 2fr);
     color: #fff;
   }
-  .buro {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    z-index: 8;
-    transition: .5s ease-in-out;
+
+  .buro{
+    max-width: 100%;
   }
+
+  .input_box{
+    width: 100%;
+  }
+
   .contenedor_two::before {
     content: '';
     position: absolute;
@@ -175,7 +231,7 @@ input{
   .contenedor_two {
     position: relative;
     width: 100%;
-    min-height: 92.9vh;
+    min-height: 165vh;
     background-color: #fff;
     overflow: hidden;
   }
